<resources>
    <string name="app_name">RolProfesor</string>
    <string name="action_settings">Settings</string>
    <string name="bienvenido_al_control_de_tareas">Bienvenido al control de Tareas</string>
    <string name="inicia_sesi_n_para_empezar">Inicia sesión para empezar</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="password">Password</string>
    <string name="iniciar_sesis_n">Iniciar sesisón</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="asignaturas">Asignaturas</string>
    <string name="estudiantes">Estudiantes</string>
    <string name="tareas">Tareas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nota">Nota</string>
    <string name="materia">Materia</string>
    <string name="alumno">Alumno:</string>
    <string name="nombre_tarea">Nombre tarea:</string>
    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="name_tarea">Nombre tarea</string>
    <string name="nota_tarea">Nota</string>
</resources>
