<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="4dp">

        <TextView
            android:text="@string/nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView_nota"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/txtView_nameAlumnoTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alumno"
            android:textColor="@android:color/white"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageButton_edit"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:id="@+id/imageButton_delete"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:id="@+id/imageButton_edit"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/imageButton_delete"
            android:layout_toStartOf="@+id/imageButton_delete"
            android:adjustViewBounds="false" />

        <TextView
            android:id="@+id/txtView_NombreTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_tarea"
            android:textColor="@android:color/white"
            android:layout_below="@+id/txtView_nameAlumnoTarea"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/materia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_materia"
            android:textColor="@android:color/white"
            android:layout_above="@+id/textView_nota"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

</android.support.v7.widget.CardView>